fix alignment

--- a/index/static/home/css/style.css
+++ b/index/static/home/css/style.css
@@ -196,7 +196,7 @@ ul.address li ul.address-text li {
 	font-weight: 400;
 }
 ul.address li ul.address-text li:nth-child(1){
-	width: 20%;
+	width: 40%;
 }
 ul.address li ul.address-text li a {
     color: #fff;
